@@ -1,5 +1,17 @@
 2015-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	PR2413: OpenJDK doesn't auto-select Zero on
+	architectures where no server JVM is available
+	* Makefile.am:
+	(ICEDTEA_ZERO_BUILD): Removed.
+	(ICEDTEA_SHARK_BUILD): Likewise.
+	(ICEDTEA_CONFIGURE): Pass zero
+	or zeroshark as appropriate to
+	--with-jvm-variants in OpenJDK configure.
+	* NEWS: Updated.
+
+2015-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	PR2414: CFLAGS, CXXFLAGS and LDFLAGS should be
 	passed to OpenJDK build
 	* Makefile.am:
